# marker

./: .gitignore  pyproject.toml  setup.sh
data/: marker.desktop
data/web/: preview.html
data/web/css/: preview-dark.css  preview-light.css
marker/: __init__.py  __main__.py  application.py  editor.py  file_explorer.py  file_manager.py  format_toolbar.py  menubar.py  minimap.py  preferences.py  preview.py  recents.py  recents_section.py  search.py  shortcuts.py  split_view.py  tab_view.py  utils.py  window.py
scripts/: fetch-deps.sh  install-desktop.sh  package.sh
