[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "marker"
version = "0.1.0"
description = "Markdown and TXT viewer/editor for Linux"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[project.scripts]
marker = "marker.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["marker*"]
